<resources>
    <string name="app_name">Schoolify</string>
    <string name="registration_for_students">Registration for Students</string>
    <string name="first_name">First Name</string>
    <string name="surname">Surname</string>
    <string name="age">Age</string>
    <string name="student_registration">Student Registration</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="proceed">Proceed</string>
    <string name="username">Username</string>
    <string name="password2">Password</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="welcome">Welcome!</string>
    <string name="please_enter_your_username_and_password_to_begin">Please enter your Username and Password to begin.</string>
    <string name="login">Login</string>
    <string name="not_yet_registered">Not yet registered?</string>
    <string name="sign_up_for_teacher">Sign Up for Teacher</string>
    <string name="sign_up_for_students">Sign Up for Students</string>
    <string name="sign_up_for_teachers">Sign Up for Teachers</string>
    <string name="teacher_registration">Teacher Registration</string>
    <string name="school">School</string>
    <string name="title_activity_dashboard__student">Dashboard_Student</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="subjects">Subjects</string>
    <string name="calendar">Calendar</string>
    <string name="tasks">Tasks</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <string name="collection_students">Students</string>
</resources>